fixed article images formatting poorly on smaller devices

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -482,22 +482,22 @@ img.article {
   width: 100%;
   margin-bottom: 15px;
   object-fit: contain;
+  border: 1px solid rgba(0,0,0,.33);
 }
 
 @media only screen and (max-width: 767px){
   img.article {
   width: 100%;
   max-height: 35em;
-  min-height: 25em;
   }
 }
 
 @media only screen and (min-width: 768px){
   img.article {
-    width: 100%;
-    height: 100%;
+    width: calc(100% - 20px);
     position: absolute;
-    padding-right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
   }
 }
 
